--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,7 @@
 
 @import 'src/components/buttons';
 @import 'src/components/hero';
+@import 'src/components/footer';
 @import 'src/components/masthead';
 @import 'src/components/organisers';
 @import 'src/components/schedule';
