--- a/src/base/_variables.scss
+++ b/src/base/_variables.scss
@@ -1,6 +1,8 @@
 // Colours
 $green: #5cd3bd;
 $white: #fff;
+$grey: #f4f4f4;
+$dark-grey: #4a4a4a;
 
 // Hero component
 $hero: url(https://scontent-syd2-1.xx.fbcdn.net/v/t1.0-9/14963293_818811204888544_7171333292064415941_n.jpg?oh=9d3bce540d8134f041963dd28e210196&oe=58C5474F);
@@ -8,3 +10,8 @@ $hero: url(https://scontent-syd2-1.xx.fbcdn.net/v/t1.0-9/14963293_81881120488854
 // Sizes
 $gutter_x: 30px;
 $gutter_y: 20px;
+
+
+// Main large breakpoint
+$bp_desk: 992px;
+$bp_lap: 768px;
