--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -5,7 +5,7 @@
 	border: 6px solid $green;
 	display: inline-block;
 	text-transform: uppercase;
-	color: #fff;
+	color: $white;
 	text-decoration: none;
 	font-weight: bold;
 	
@@ -14,6 +14,36 @@
 		color: $green;
 		background: transparent;
 		
+	}
+
+
+	&--ghost {
+
+		background: transparent;
+
+		&:hover {
+
+			background-color: $green;
+			color: $white;
+
+		}
+
+	}
+
+
+	&--white {
+
+		border-color: $white;
+		color: $white;
+		background-color: transparent;
+
+		&:hover {
+
+			color: $green;
+			background-color: $white;
+
+		}
+
 	}
 	
 }
