--- a/styles.scss
+++ b/styles.scss
@@ -7,7 +7,11 @@
 
 // Components
 @import 'src/components/default';
+@import 'src/components/site';
+@import 'src/components/headings';
 
+@import 'src/components/band';
+@import 'src/components/wrap';
 @import 'src/components/buttons';
 @import 'src/components/hero';
 @import 'src/components/masthead';
@@ -16,3 +20,4 @@
 @import 'src/components/speakers';
 @import 'src/components/sponsors';
 @import 'src/components/tickets';
+@import 'src/components/callout';
