Add feature box component
- Adjust default band
- Add button :visited styles
- Add layout component
- Add basic sprite mixin and component
- Add widget styles for home page

--- a/src/base/_mixins.scss
+++ b/src/base/_mixins.scss
@@ -8,3 +8,10 @@
 	}
 
 }
+
+
+@mixin sprite( $x, $y ) {
+
+	background-position: #{ -( $icon_height * ( $x - 1 ) ) } #{ -( $icon_width * ( $y - 1) ) };
+
+}
