--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -2,14 +2,21 @@
 	
 	padding: $gutter_y/2 $gutter_x;
 	background: $green;
-	border: 6px solid $green;
+	border: 2px solid $green;
 	display: inline-block;
 	text-transform: uppercase;
 	color: $white;
 	text-decoration: none;
 	font-weight: bold;
+
+	&:visited {
+
+		color: $white;
+
+	}
 	
-	&:hover {
+	&:hover,
+	&:active {
 	
 		color: $green;
 		background: transparent;
@@ -21,7 +28,8 @@
 
 		background: transparent;
 
-		&:hover {
+		&:hover,
+		&:active {
 
 			background-color: $green;
 			color: $white;
@@ -37,7 +45,14 @@
 		color: $white;
 		background-color: transparent;
 
-		&:hover {
+		&:visited {
+
+			color: $white;
+
+		}
+
+		&:hover,
+		&:active {
 
 			color: $green;
 			background-color: $white;
