--- a/styles.scss
+++ b/styles.scss
@@ -21,3 +21,7 @@
 @import 'src/components/sponsors';
 @import 'src/components/tickets';
 @import 'src/components/callout';
+@import 'src/components/box';
+@import 'src/components/sprite';
+@import 'src/components/layout';
+@import 'src/components/widgets';
