--- a/styles.scss
+++ b/styles.scss
@@ -18,3 +18,9 @@
 @import 'src/components/tickets';
 @import 'src/components/footer-widgets';
 @import 'src/components/forms';
+@import 'src/components/band';
+@import 'src/components/headings';
+@import 'src/components/wrap';
+@import 'src/components/layout';
+@import 'src/components/box';
+@import 'src/components/callout';
