--- a/src/components/_organisers.scss
+++ b/src/components/_organisers.scss
@@ -1,13 +1,12 @@
 .wcorg-organizers {
 	
-	display: flex;
-	flex-direction: row-reverse;
-	flex-wrap: wrap-reverse;
-	
 	.wcorg-organizer {
 		
-		flex: 1;
-		flex-basis: 33%;
+		h2 {
+
+			@extend h3;
+
+		}
 		
 	}
 	
