Updating hero heading style

--- a/src/base/_variables.scss
+++ b/src/base/_variables.scss
@@ -12,7 +12,7 @@ $lightblue: #19293a;
 $hero: url(https://scontent-syd2-1.xx.fbcdn.net/v/t1.0-9/14963293_818811204888544_7171333292064415941_n.jpg?oh=9d3bce540d8134f041963dd28e210196&oe=58C5474F);
 
 // Sizes
-$gutter_x: 30px;
+$gutter_x: 3rem;
 $gutter_y: 20px;
 
 // Main large breakpoint
