Styling the blog pages

--- a/src/base/_variables.scss
+++ b/src/base/_variables.scss
@@ -13,7 +13,7 @@ $hero: url(https://scontent-syd2-1.xx.fbcdn.net/v/t1.0-9/14963293_81881120488854
 
 // Sizes
 $gutter_x: 3rem;
-$gutter_y: 20px;
+$gutter_y: 2rem;
 
 // Main large breakpoint
 $bp_desk: 992px;
