--- a/styles.scss
+++ b/styles.scss
@@ -30,3 +30,5 @@
 @import 'src/components/box';
 @import 'src/components/callout';
 @import 'src/components/sprite';
+@import 'src/components/blog';
+@import 'src/components/grid';
