--- a/src/components/_headings.scss
+++ b/src/components/_headings.scss
@@ -1,5 +1,6 @@
 h1 {
 
+	font-size: 5rem;
 	font-weight: 900;
 
 }
@@ -8,7 +9,7 @@ h1 {
 h2,
 .h2 {
 
-	font-size: 7.5em;
+	font-size: 3.5em;
 	font-weight: 900;
 	text-transform: uppercase;
 
@@ -23,6 +24,12 @@ h3,
 
 }
 
+
+h4 {
+	
+	font-size: 1.5em;
+
+}
 
 
 h6 {
