Styling sponsors pages and widget

--- a/src/base/_variables.scss
+++ b/src/base/_variables.scss
@@ -7,6 +7,9 @@ $dark-grey: #4a4a4a;
 $navy: #19293a;
 $darkblue: #111c27;
 $lightblue: #19293a;
+$gold: #C9AE5D;
+$silver: #c0c0c0;
+$bronze: #CD7F32;
 
 // Hero component
 $hero: url(https://scontent-syd2-1.xx.fbcdn.net/v/t1.0-9/14963293_818811204888544_7171333292064415941_n.jpg?oh=9d3bce540d8134f041963dd28e210196&oe=58C5474F);
