--- a/src/components/_hero.scss
+++ b/src/components/_hero.scss
@@ -55,7 +55,7 @@ body.home #after-header-widgets {
 	
 }
 
-body.page:not(.home) .entry-header, body.archive .page-header, body.single-post .entry-header {
+body.page:not(.home) .entry-header, body.archive .page-header, body.single-post .entry-header, body.single-wcb_speaker .entry-header {
 
 	padding: 100px 0 50px;
 	background-image: $hero;
@@ -97,7 +97,7 @@ body.archive .page-title {
 }
 
 
-body.blog, body.single:not(.single-post) {
+body.blog, body.single:not(.single-post):not(.single-wcb_speaker) {
 
 	#before-content-widgets {
 		
