--- a/src/components/_wrap.scss
+++ b/src/components/_wrap.scss
@@ -9,10 +9,11 @@
 }
 
 body.home #primary, 
-body.single-post article > .entry-content, 
+body.single-post article > .entry-content,
+body.single-wcb_speaker article > .entry-content,
 body.archive article, 
 body.page article > .entry-content, 
-body.single:not(.single-post) #primary {
+body.single:not(.single-post):not(.single-wcb_speaker) #primary {
 
 	@extend .wrap;
 
