Adjusting font weight of home hero title

--- a/src/components/_hero.scss
+++ b/src/components/_hero.scss
@@ -20,6 +20,13 @@ body.home #after-header-widgets {
 	h1 {
 		
 		font-size: 75px;
+		font-weight: 300;
+
+		b {
+
+			font-weight: 600;
+
+		}
 
 		@include mq( $bp_lap ) {
 
