--- a/styles.scss
+++ b/styles.scss
@@ -32,3 +32,4 @@
 @import 'src/components/sprite';
 @import 'src/components/blog';
 @import 'src/components/grid';
+@import 'src/components/search';
