--- a/src/components/_wrap.scss
+++ b/src/components/_wrap.scss
@@ -11,7 +11,8 @@
 body.home #primary, 
 body.single-post article > .entry-content,
 body.single-wcb_speaker article > .entry-content,
-body.archive article, 
+body.archive article,
+body.search article,
 body.page article > .entry-content, 
 body.single:not(.single-post):not(.single-wcb_speaker) #primary {
 
@@ -22,7 +23,9 @@ body.single:not(.single-post):not(.single-wcb_speaker) #primary {
 
 }
 
-#content .site-navigation, #comments, body.single footer.entry-meta, #secondary {
+#content .site-navigation, #comments,
+body.single footer.entry-meta,
+#secondary {
 	
 	@extend .wrap;
 
