Adding hover state to colophon links

--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -24,6 +24,12 @@
 			text-decoration: none;
 			text-transform: uppercase;
 
+			&:hover, &:active, &focus {
+
+				color: $green;
+
+			}
+
 		}
 
 	}
