--- a/src/components/_hero.scss
+++ b/src/components/_hero.scss
@@ -4,7 +4,7 @@ body.home #after-header-widgets {
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
-	height: 100vh;
+	min-height: 100vh;
 	display: flex;
 	align-items: center;
 	text-align: center;
