Add home page card icons
- Update sprite sheet with additional icons
- Add css for sprite icons
- Add hover states for icons inside the box/card

--- a/src/components/_box.scss
+++ b/src/components/_box.scss
@@ -40,6 +40,19 @@
 
 		}
 
+
+		.sprite--heart {
+
+			@include sprite( 2, 2 );
+
+		}
+
+		.sprite--megaphone {
+
+			@include sprite( 2, 3 );
+
+		}
+
 	}
 
 
