Moving footer image src from tinypic to github like the rest of them

--- a/src/components/_footer-widgets.scss
+++ b/src/components/_footer-widgets.scss
@@ -2,7 +2,7 @@
 
 	@extend .band--large;
 	@extend .band--secondary;
-	background-image: url( 'http://i63.tinypic.com/bjagr6.png' );
+	background-image: url( 'https://raw.githubusercontent.com/cameronjonesweb/wcbne17/master/src/img/brisbane-city.png' );
 	background-position: bottom center;
 	background-repeat: no-repeat;
 	padding-bottom: 0 !important;
