Adding cross browser and cross device tweaks

--- a/src/components/_band.scss
+++ b/src/components/_band.scss
@@ -16,8 +16,8 @@
 		background-color: $green;
 		color: $white;
 
-		a,
-		a:visited {
+		a:not(.button),
+		a:not(.button):visited {
 
 			color: inherit;
 
