--- a/src/components/_forms.scss
+++ b/src/components/_forms.scss
@@ -8,8 +8,7 @@ body .contact-form {
 
 	input[type=text], input[type=email], textarea, select {
 		
-		@extend input;
-
+		padding: .75em 1em;
 		width: 80%;
 
 	}
@@ -30,7 +29,7 @@ input[type=checkbox],
 body .contact-form input[type=checkbox] {
 
 	border: 2px solid $dark-grey;
-    -webkit-appearance: none;
+    -webkit-appearance: none !important;
     border-radius: 2px;
     margin-bottom: 0;
     padding: 6px;
