--- a/src/components/_hero.scss
+++ b/src/components/_hero.scss
@@ -1,15 +1,17 @@
 body.home #after-header-widgets {
 	
-	background-image: $hero;
-	background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
-	min-height: 100vh;
-	display: flex;
 	align-items: center;
+	background-attachment: fixed;
+	background-image: $hero;
+	background-position: center;
+	background-size: cover;
+	color: $white;
+	display: flex;
+	min-height: 100vh;
+	padding-bottom: $gutter_y * 2;
+	padding-top: $gutter_y * 2;
 	text-align: center;
 	width: 100%;
-	color: $white;
 	
 	aside {
 	
@@ -19,7 +21,7 @@ body.home #after-header-widgets {
 	
 	h1 {
 		
-		font-size: 75px;
+		font-size: 7rem;
 		font-weight: 300;
 
 		b {
