--- a/src/base/_variables.scss
+++ b/src/base/_variables.scss
@@ -12,7 +12,7 @@ $silver: #c0c0c0;
 $bronze: #CD7F32;
 
 // Hero component
-$hero: url(https://scontent-syd2-1.xx.fbcdn.net/v/t1.0-9/14963293_818811204888544_7171333292064415941_n.jpg?oh=9d3bce540d8134f041963dd28e210196&oe=58C5474F);
+$hero: url(https://2017.brisbane.wordcamp.org/files/2017/03/69A8086-Edit-1.jpg);
 
 // Sizes
 $gutter_x: 3rem;
