--- a/src/components/_wrap.scss
+++ b/src/components/_wrap.scss
@@ -29,3 +29,26 @@ body.search article > * {
 	@extend .wrap;
 
 }
+
+
+
+.u-line-length {
+
+	max-width: 48em;
+
+}
+
+
+.u-line-length--center {
+
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
+
+.u-text--center {
+
+	text-align: center;
+
+}
