--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -18,7 +18,7 @@
 
 			color: $white;
 			display: inline-block;
-			font-size: 18px;
+			font-size: 1em;
 			font-weight: bold;
 			margin: $gutter_y / 2 $gutter_x / 2;
 			text-decoration: none;
