--- a/src/components/_sponsors.scss
+++ b/src/components/_sponsors.scss
@@ -2,13 +2,33 @@
 
 	@extend .band;
 	@extend .band--large;
-	padding-top: 0 !important;
+	@extend .band--grey;
+
+
+	.widget-title {
+
+		padding-top: 0;
+
+	}
+
+
+	.sponsor-level-title {
+
+		text-transform: uppercase;
+		font-weight: 600;
+		font-size: 1em;
+
+	}
+
 
 	.sponsor-logo {
 
 		background-color: $white;
 		border-style: solid;
-		border-width: 1em;
+		border-width: 2px;
+		border-bottom: none;
+		border-left: none;
+		border-right: none;
 		color: $green;
 		display: inline-block;
 		font-weight: 600;
