Reduce default typeface size

--- a/src/components/_footer-widgets.scss
+++ b/src/components/_footer-widgets.scss
@@ -96,7 +96,7 @@
 		@extend .button;
 		box-shadow: none !important;
 		border-radius: 0 !important;
-		padding: 1.15em  1.5em;;
+		padding: .95em  1.5em;;
 
 	}
 
