--- a/styles.scss
+++ b/styles.scss
@@ -32,3 +32,4 @@
 @import 'src/components/tickets';
 @import 'src/components/widgets';
 @import 'src/components/wrap';
+@import 'src/components/page';
