--- a/src/components/_page.scss
+++ b/src/components/_page.scss
@@ -16,7 +16,7 @@
 
 .entry-content p {
 
-	max-width: 45em;
+	max-width: 55em;
 
 }
 
@@ -24,5 +24,28 @@
 .avatar {
 
 	border-radius: 50%;
+
+}
+
+
+.site-content a {
+
+	box-shadow: inset 0 -.05em 0 0 $white, inset 0 -.1em 0 0 currentColor;
+	color: currentColor;
+	text-decoration: none;
+	text-shadow: .05em .05em 0 $white, -.05em .05em 0 $white, .1em 0 0 $white, -.1em 0 0 $white;
+
+	body.blog article:nth-child(even) & {
+
+		box-shadow: inset 0 -.05em 0 0 $grey, inset 0 -.1em 0 0 currentColor;
+		text-shadow: .05em .05em 0 $grey, -.05em .05em 0 $grey, .1em 0 0 $grey, -.1em 0 0 $grey;
+
+	}
+
+	&:hover {
+
+		color: $green;
+
+	}
 
 }
