Add styling adjustments for headings, comment areas

--- a/src/components/_blog.scss
+++ b/src/components/_blog.scss
@@ -49,3 +49,19 @@ body.blog article {
 	}
 
 }
+
+
+#comments {
+
+	@extend .band;
+	@extend .band--grey;
+	@extend .band--large;
+
+}
+
+
+	.comment-respond {
+
+		@extend .wrap;
+
+	}
