--- a/src/components/_forms.scss
+++ b/src/components/_forms.scss
@@ -32,6 +32,7 @@ body .contact-form input[type=checkbox] {
     -webkit-appearance: none !important;
     border-radius: 2px;
     margin-bottom: 0;
+    margin-right: .5em;
     padding: 6px;
     position: relative;
     vertical-align: baseline;
