--- a/src/components/_wrap.scss
+++ b/src/components/_wrap.scss
@@ -12,7 +12,8 @@ body.single-post article > .entry-content,
 body.single-wcb_speaker article > .entry-content,
 body.archive article,
 body.page article > .entry-content, 
-body.single:not(.single-post):not(.single-wcb_speaker) #primary {
+body.single:not(.single-post):not(.single-wcb_speaker) #primary,
+body.error404 .entry-content {
 
 	@extend .wrap;
 
