--- a/src/components/_organisers.scss
+++ b/src/components/_organisers.scss
@@ -1,18 +1,31 @@
 .wcorg-organizers {
 	
 	.wcorg-organizer {
+
+		margin-bottom: 1em;
+
+		&:after {
+
+			@include clearfix();
+
+		}
 		
 		h2 {
 
 			@extend h3;
+			margin-bottom: .5em;
+			font-size: 3em;
 
 		}
 
-		.wcorg-organizer-description {
+		.avatar {
+
+			margin-bottom: 1em;
 
 			@include mq( $bp_desk ) {
 
-				max-width: 70%;
+				float: left;
+				margin-right: 2em;
 
 			}
 
