Removing whitespace where the comments wrapper is that shouldnt actually be displaying

--- a/src/components/_blog.scss
+++ b/src/components/_blog.scss
@@ -57,6 +57,12 @@ body.blog article {
 	@extend .band--grey;
 	@extend .band--large;
 
+	body:not(.single-post) {
+
+		display: none;
+
+	}
+
 }
 
 
