Adding missing character

--- a/src/components/_blog.scss
+++ b/src/components/_blog.scss
@@ -57,7 +57,7 @@ body.blog article {
 	@extend .band--grey;
 	@extend .band--large;
 
-	body:not(.single-post) {
+	body:not(.single-post) & {
 
 		display: none;
 
