Making attendees page responsive

--- a/styles.scss
+++ b/styles.scss
@@ -33,3 +33,4 @@
 @import 'src/components/widgets';
 @import 'src/components/wrap';
 @import 'src/components/page';
+@import 'src/components/attendees';
