Update attendee list styling

--- a/src/components/_attendees.scss
+++ b/src/components/_attendees.scss
@@ -1,4 +1,11 @@
 #tix-attendees {
+
+	.tix-attendee-list {
+
+		margin-left: -( $gutter_x );
+		max-width: none;
+
+	}
 	
 	.tix-attendee-list li {
 
@@ -6,6 +13,8 @@
 		float: none;
 		margin-right: 0;
 		width: 100%;
+		vertical-align: top;
+		padding-left: $gutter_x;
 
 		@include mq( $bp_lap ) {
 
@@ -30,16 +39,30 @@
 		.tix-field {
 
 			margin-left: 0;
-			padding-left: 60px;
+			padding-left: 70px;
+			
+		}
 
-			@include mq( $bp_desk ) {
 
-				padding-left: 70px;
+		a {
+
+			text-decoration: none;
+
+			&:hover {
+
+				text-decoration: underline;
 
 			}
 
 		}
 
 	}
+
+}
+
+
+.tix-attendee-name {
+
+	font-weight: bold;
 
 }
