--- a/src/components/_forms.scss
+++ b/src/components/_forms.scss
@@ -7,10 +7,20 @@ input, #s {
 body .contact-form,
 .tix_tickets_table {
 
-	input[type=text], input[type=email], textarea, select {
+	input[type=text],
+	input[type=email],
+	textarea,
+	select {
 		
 		padding: .75em 1em;
-		width: 80%;
+		width: 100%;
+		border-radius: 0;
+
+		@include mq( $bp_lap ) {
+
+			width: 80%;
+		
+		}
 
 	}
 
@@ -18,7 +28,11 @@ body .contact-form,
 
 .tix_tickets_table {
 
-	input[type=text],input[type=url], input[type=email], textarea, select {
+	input[type=text],
+	input[type=url],
+	input[type=email],
+	textarea,
+	select {
 
 		width: 100%;
 
